alignmentd fix

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ a:hover {
 section {
   padding-top: 4vh;
   height: 96vh;
-  margin: 0 10rem;
+  margin: 0 4rem;
   box-sizing: border-box;
   min-height: fit-content;
 }
